# yaws3

./: design.md  designv2.md  glfw.py  pyproject.toml
.codex/: AGENTS.md
.github/workflows/: ci.yml
app/: configuration.json  main.py
engine/: camera.py  framebuffer.py  main.py  shader.py  window.py
engine/camera/: __init__.py  fly_camera.py
engine/core/: application.py  config.py  glfw_provider.py  lifecycle.py
engine/graphics/: frame_graph.py  render_context.py  renderer.py
engine/graphics/passes/: __init__.py  atmospheric_entry_cache_pass.py  atmospheric_integration_pass.py  base_pass.py  cloud_lighting_pass.py  composite_tonemap_pass.py  deferred_surface_lighting_pass.py  planetary_depth_geometry_pass.py  raymarch_sphere_pass.py  surface_gbuffer_pass.py
engine/input/: __init__.py  input_manager.py
engine/shaders/: blit.frag  fullscreen.vert  sdf_sphere.frag
engine/window/: __init__.py  glfw_window.py
sprint/: PO.md
sprint/01/: Plan.md  Tasks.md
tests/: test_engine_imports.py  test_fly_camera.py  test_headless_mode.py  test_hello_world.py  test_input_manager.py
